Adding the OL features required for clickable polygons to the build config.

--- a/imageryindex/django/oamcatalog/util/oam.cfg
+++ b/imageryindex/django/oamcatalog/util/oam.cfg
@@ -19,12 +19,14 @@ OpenLayers/Renderer/VML.js
 OpenLayers/Control/Navigation.js
 OpenLayers/Control/Attribution.js
 OpenLayers/Control/ZoomPanel.js
+OpenLayers/Control/SelectFeature.js
 OpenLayers/StyleMap.js
 OpenLayers/Protocol/HTTP.js
 OpenLayers/Format/JSON.js
 OpenLayers/Feature/Vector.js
 OpenLayers/Strategy/BBOX.js
 OpenLayers/Geometry/Polygon.js
+OpenLayers/Popup/FramedCloud.js
 
 [exclude]
 
